--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
