--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@prisma/client": "^4.8.0",
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
+    "@types/react-datepicker": "^4.8.0",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
     "typescript": "4.9.4"
