--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
     "recoil": "^0.7.6",
-    "typescript": "4.9.4"
+    "swr": "^2.0.0",
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
