--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.41.0",
     "recoil": "^0.7.6",
     "swr": "^2.0.0",
+    "timeago.js": "^4.0.2",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
   },
