--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^4.8.0",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.8.1",
     "@types/node": "18.11.14",
     "@types/react": "18.0.26",
     "@types/react-datepicker": "^4.8.0",
@@ -18,6 +19,7 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "next-auth": "^4.18.8",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
@@ -35,7 +37,7 @@
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "prisma": "^4.8.0",
+    "prisma": "^4.8.1",
     "tailwindcss": "^3.2.4"
   }
 }
